# docs/swagger-resume-book.yml
@@ -82,3 +82,34 @@ paths:
         type: aws_proxy
         uri:
           Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${LambdaFunctionName}/invocations"
+
+  /api/v1/recruiter/view_profile/{username}:
+    get:
+      summary: Recruiter mode - get student profile.
+      operationId: recruiterGetStudentProfile
+      responses:
+        200:
+          description: OK
+      
+      parameters:
+        - name: username
+          in: path
+          schema:
+            type: string
+            format: string
+          required: true
+          description: Username to get profile for
+
+      security:
+        - CombinedAuthorizer: []
+
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: 200
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        contentHandling: CONVERT_TO_TEXT
+        type: aws_proxy
+        uri:
+          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${LambdaFunctionName}/invocations"
